# table_loader

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
projects/peaceful-joy-175709/static_data/: d_country.json  d_country.jsonl  d_product.json
projects/table-loader-dev/other_data/: other.jsonl
projects/table-loader-dev/static_data/: d_country.json  d_country.jsonl  d_country_mview.sql  d_country_view.sql  other_view.sql  static.jsonl
projects/table-loader-prod/other_data/: d_something.json  d_something.jsonl  other.json
projects/table-loader-prod/static_data/: static.json
table_loader/: cli.py  conftest.py  model.py  repository.py  state.py
table_loader/src/synchronisation/adapters/: repository.py  repository_loader.py
table_loader/src/synchronisation/domain/: model.py
table_loader/src/synchronisation/entrypoints/: cli.py
table_loader/src/synchronisation/service_layer/: actions.py  uow.py
table_loader/src/synchronisation/table_loader.egg-info/: SOURCES.txt  entry_points.txt  top_level.txt
table_loader/src/table_loader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
table_loader/tests/: conftest.py  helpers.py  pytest.ini
table_loader/tests/e2e/: test_cli.py
table_loader/tests/integration/: test_integration.py
table_loader/tests/unit/: conftest.py  test_domain.py  test_model.py  test_repository.py  variables.py
tests/: conftest.py  test_integration.py  test_table_components.py
