[tool.poetry]
name = "table_loader"
version = "0.1.0"
description = ""
authors = ["Antonio <antonio.one@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
table_loader = "table_loader.cli:main"
