[tool.poetry]
name = "table_loader"
version = "0.1.0"
description = ""
authors = ["Antonio <antonio.one@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^1.28.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.7.1"
pytest = "^6.1.0"

[tool.poetry.scripts]
table_loader = "table_loader.cli:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
