[tool.poetry]
name = "table_loader"
version = "0.1.0"
description = ""
authors = ["Antonio <antonio.one@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^1.28.0"
google-cloud-storage = "^1.31.2"
crcmod = "^1.7"
google-api-python-client = "^1.12.3"
oauth2client = "<4.0.0"
simplejson = "^3.17.2"

#oauth2client = "^4.1.3"
# This is throwing a lot of errors due to incorrectly set error levels
# ModuleNotFoundError: No module named 'oauth2client.contrib.locked_file'
# ModuleNotFoundError: No module named 'oauth2client.locked_file'
# ImportError: file_cache is unavailable when using oauth2client >= 4.0.0 or google-auth

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pre-commit = "^2.7.1"
pytest = "^6.1.0"

[tool.poetry.scripts]
table_loader = "table_loader.cli:main"
table_loader_state = "table_loader.state:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
